--- a/Using_SaveFiles.ipynb
+++ b/Using_SaveFiles.ipynb
@@ -18,6 +18,27 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting savingfig2\n",
+      "  Downloading savingfig2-0.1.tar.gz (2.3 kB)\n",
+      "\u001b[31mERROR: Could not find a version that satisfies the requirement os (from savingfig2) (from versions: none)\u001b[0m\n",
+      "\u001b[31mERROR: No matching distribution found for os\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install savingfig2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np \n",
