--- a/Using_SaveFiles.ipynb
+++ b/Using_SaveFiles.ipynb
@@ -16,23 +16,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting savingfig2\n",
-      "  Downloading savingfig2-0.1.tar.gz (2.3 kB)\n",
-      "\u001b[31mERROR: Could not find a version that satisfies the requirement os (from savingfig2) (from versions: none)\u001b[0m\n",
+      "Collecting savingfigR\n",
+      "  Downloading savingfigR-0.1.tar.gz (2.3 kB)\n",
+      "\u001b[31mERROR: Could not find a version that satisfies the requirement os (from savingfigr) (from versions: none)\u001b[0m\n",
       "\u001b[31mERROR: No matching distribution found for os\u001b[0m\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
-    "pip install savingfig2"
+    "pip install savingfigR"
    ]
   },
   {
